# apps/auth-service/src/routes/auth.router.ts
@@ -2,6 +2,7 @@ import express, { Router } from 'express';
 import {
 	loginUser,
 	registerUser,
+	userForgotPassword,
 	verifyUser
 } from '../controllers/auth.controller';
 
@@ -10,5 +11,6 @@ const router: Router = express.Router();
 router.post('/register', registerUser);
 router.post('/verify', verifyUser);
 router.post('/login', loginUser);
+router.post('/forgot-pass', userForgotPassword);
 
 export default router;
